directly refer to the user avatar url for views
refs #9679

Often we already have the user loaded. Sometimes we don't, like when
displaying a stream item where only the user id is serialized to the
data blob. In these cases, we load the user now. This can make the
request slightly slower, but that's still more optimal than making
another separate request that loads the user.

test plan: avatars should still display as expected throughout the app,
but the urls canvas puts in the html will change -- they will directly
point at the image url now, rather than going through /images/users/XX

Change-Id: I418b81ee59aecd0ffd0c55c8ac305b77115f464e
Reviewed-on: https://gerrit.instructure.com/13061
Reviewed-by: Jon Jensen <jon@instructure.com>
Tested-by: Brian Palmer <brianp@instructure.com>

--- a/app/views/context/roster.html.erb
+++ b/app/views/context/roster.html.erb
@@ -54,7 +54,7 @@
           <tr class="user" id="user_<%= student.id %>">
             <td style="vertical-align: top;">
               <% if service_enabled?(:avatars) %>
-                <div class="avatar"><%= avatar(student.id, @context.asset_string, 30) %></div>
+                <div class="avatar"><%= avatar(student, @context.asset_string, 30) %></div>
               <% end %>
             </td>
             <td>
@@ -86,7 +86,7 @@
           <tr class="user" id="user_<%= teacher.id %>">
             <td style="vertical-align: top;">
               <% if service_enabled?(:avatars) %>
-                <div class="avatar"><%= avatar(teacher.id, @context.asset_string, 30) %></div>
+                <div class="avatar"><%= avatar(teacher, @context.asset_string, 30) %></div>
               <% end %>
             </td>
             <td>
