--- a/app/views/layouts/_fixed_bottom.html.erb
+++ b/app/views/layouts/_fixed_bottom.html.erb
@@ -28,7 +28,7 @@
     <div id="masquerade_bar" class="ui-widget ui-state-default">
       <% if service_enabled?(:avatars) %>
         <div class="masquerading_avatar">
-          <img src="<%= avatar_image_url(User.avatar_key(@current_user.id)) %>" alt="<%= @current_user.short_name %>">
+          <%= avatar_image(@current_user, 32) %>
         </div>
       <% end %>
       <b><%= t('masquerading.warning_title', "You are currently masquerading as %{user_name}", :user_name => @current_user.short_name) %></b>
