--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -24,7 +24,7 @@
 
 <% if service_enabled?(:avatars) %>
   <a href="#" class="profile_pic_link <%= @user.avatar_state %>" title="<%= t('titles.click_to_change_profile_pic', "Click to change profile pic") %>" style="float: left; margin-right: 5px; min-width: 50px; min-height: 50px; display: inline-block;">
-    <%= avatar_image(@user.id) %>
+    <%= avatar_image(@user) %>
   </a>
 <% end %>
 <h2 style="padding-top: 0.3em;"><%= t('headers.users_profile', "%{user}'s Profile", :user => @user.short_name) %></h2>
