--- a/app/views/users/_name.html.erb
+++ b/app/views/users/_name.html.erb
@@ -26,7 +26,7 @@
           <th><%= before_label('profile_picture', 'Profile Picture') %></th>
           <td>
             <span class="avatar_image">
-              <img src="<%= @user.avatar_url(50, @domain_root_account && @domain_root_account.settings[:avatars], "#{request.protocol}#{request.host_with_port}/images/dotted_pic.png") %>"/>
+              <%= avatar_image(@user, 50) %>
             </span>
             <% if can_do(@user, @current_user, :remove_avatar) %>
               <a href="<%= update_avatar_image_url(@user.id) %>" class="remove_avatar_picture_link"><%= t('remove_avatar', 'Remove avatar picture') %></a>
