shows exact time limit on quiz summaries and reports
fixes #7327

test plan
  - create a new quiz
  - give it a time limit over 45 min and publish it (try for less than
    45 also)
  - /courses/<course.id>/quizzes
  - should be a summary of all of the quizzes in the course
  - time limit for each course should say the exact number of minutes
    and not something like "about 1 hour"
  - take the quiz
  - click on the quiz to view the summary once you're done taking it
  - above the quiz and on the right bar it should say the exact amount
    of time (in minutes) the user spent taking the quiz instead of something like
    "about 1 hour"

Change-Id: I5f7614e82a5f944b046d0a8fd0dd5106602b00be
Reviewed-on: https://gerrit.instructure.com/13068
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Simon Williams <simon@instructure.com>
Reviewed-by: Jacob Fugal <jacob@instructure.com>

--- a/app/views/quizzes/_quiz_right_side.html.erb
+++ b/app/views/quizzes/_quiz_right_side.html.erb
@@ -27,7 +27,7 @@
       <tbody>
         <tr>
           <th><%= before_label(:time, "Time") %></th>
-          <td><%= time_ago_in_words(Time.now - ((@submission.finished_at || @submission.end_at || @submission.started_at) - @submission.started_at)) %></td>
+          <td><%= duration_in_minutes((@submission.finished_at || @submission.end_at || @submission.started_at) - @submission.started_at) %></td>
         </tr>
         <% unless @quiz.assignment.present? && @quiz.assignment.muted? %>
         <tr style="<%= hidden if @quiz.quiz_type == 'survey' %>">
