spec: refactoring course_wizard
test:
  1. added id selector to "start a new course"
     button
  2. refactored file to use f aliases

 # Please enter the commit message for your changes. Lines starting

Change-Id: I5f885cfd3bdd902d5bfa923b020d3625c42a49b5
Reviewed-on: https://gerrit.instructure.com/13108
Reviewed-by: Jake Sorce <jake@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -25,7 +25,7 @@
   <% end %>
   <% if show_user_create_course_button(@current_user) %>
   <div class="rs-margin-lr">
-    <a href="<%= getting_started_path(:fresh => 1) %>" class="button button-sidebar-wide"><%= t('start_new_course', 'Start a New Course') %></a>
+    <a href="<%= getting_started_path(:fresh => 1) %>" id="start_new_course" class="button button-sidebar-wide"><%= t('start_new_course', 'Start a New Course') %></a>
   </div>
   <% end %>
 <% end %>
