--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,7 +9,7 @@
 <% if show_user_create_course_button(@current_user) %>
     <% content_for :right_side do %>
         <div class="rs-margin-lr rs-margin-top">
-            <a href="<%= getting_started_path(:fresh => 1) %>" style="font-size: 1.3em;" class="button button-sidebar-wide"><%= t('links.start_course', %{Start a New Course}) %></a>
+            <a href="<%= getting_started_path(:fresh => 1) %>" style="font-size: 1.3em;" id="start_new_course" class="button button-sidebar-wide"><%= t('links.start_course', %{Start a New Course}) %></a>
         </div>
     <% end %>
 <% end %>
