right side button wording from View Student Groups to View User Groups
fixes #9542

test plan:
  1. Go into Canvas at the root account level then go into Users
  2. Notice that the button is marked 'View User Groups' now

Change-Id: Ic8679131e1f072787967695e6157dbdb76bacfea
Reviewed-on: https://gerrit.instructure.com/13114
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/context/_roster_right_side.html.erb
+++ b/app/views/context/_roster_right_side.html.erb
@@ -2,7 +2,7 @@
   <% if @context.is_a?(Course) %>
     <% if can_do(@context, @current_user, :read_roster) %>
       <% sidebar_button context_url(@context, :context_groups_url),
-                        t('links.view_student_groups', 'View Student Groups'),
+                        t('links.view_user_groups', 'View User Groups'),
                         'group.png' %>
     <% end %>
 
