--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
 
 <% content_for :right_side do %>
   <div class="rs-margin-lr rs-margin-top" style="padding-bottom: 20px;">
-    <a href="<%= context_url(@context, :context_groups_url) %>" class="button button-sidebar-wide"><%= image_tag "group.png", :alt => '' %> <%= t('buttons.student_groups', 'View Student Groups') %></a>
+    <a href="<%= context_url(@context, :context_groups_url) %>" class="button button-sidebar-wide user_groups"><%= image_tag "group.png", :alt => '' %> <%= t('buttons.user_groups', 'View User Groups') %></a>
     <a href="<%= context_url(@context, :context_avatars_url) %>" class="button button-sidebar-wide"><%= image_tag "image_icon.gif", :alt => '' %> <%= t('buttons.manage_profile_pictures', 'Manage Profile Pictures') %></a>
   </div>
 
