setting to remove error_reports search functionality
This isn't performant on large tables

test plan: Setting.set("error_search_enabled", "false"), restart, visit
/error_reports as a site admin, paging and filtering by category should
work but the search box should be gone.

Change-Id: I769688b6aee9032802ce6140bdf419201535213a
Reviewed-on: https://gerrit.instructure.com/13100
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Cody Cutrer <cody@instructure.com>

--- a/app/views/errors/index.html.erb
+++ b/app/views/errors/index.html.erb
@@ -4,8 +4,10 @@
 %>
 
 <% form_for @current_user, :url => '/error_reports', :html => { :method => :get }  do |f| %>
-  <%= t :message_contains, "Message contains" %>
-  <input type="text" name="message" value="<%= @message %>" style="width: 250px;"/>
+  <% if error_search_enabled? %>
+    <%= t :message_contains, "Message contains" %>
+    <input type="text" name="message" value="<%= @message %>" style="width: 250px;"/>
+  <% end %>
   <select name="category">
     <%= options_for_select([[t(:all_categories, " - All Categories -"), nil]] + ErrorReport.categories, params[:category]) %>
   </select>
