fix javascript on edit rubric button. fixes #5207
clicking the edit rubric button multiple times no longer
causes the edit rubric form to appear multiple times on
the page.

also update edit/cancel buttons on edit rubric form to
match new canvas styles.

test plan:
  * create and view a new rubric;
  * click the 'edit rubric' button in the right sidebar
    and verify that 1) the button appears disabled, and
    2) the edit rubric form appears;
  * click the edit button again and verify that the form
    does not appear twice; also verify that the edit/cancel
    buttons are right-aligned and match the new canvas
    styles.

Change-Id: I595e776af624b1b5c524194ccfff03835e31ae75
Reviewed-on: https://gerrit.instructure.com/13139
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/stylesheets/g_rubrics.sass
+++ b/app/stylesheets/g_rubrics.sass
@@ -193,3 +193,7 @@ table.rubric
   .points_form
     .rating_custom
       height: 15px
+
+.edit-rubric-form .button-container
+  margin: 8px 0
+  text-align: right
