don't show threaded option for announcements
test plan:
edit/create announcement, make sure the 'threaded'
checkbox is not present.
do same for discussion, make sure it IS there

Change-Id: I7a9a295e5e064259e4b27e90e6094670415ea7ed
Reviewed-on: https://gerrit.instructure.com/13189
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/jst/DiscussionTopics/EditView.handlebars
+++ b/app/views/jst/DiscussionTopics/EditView.handlebars
@@ -37,12 +37,14 @@
   <div class="control-group">
     <label class="control-label">Options</label>
     <div class="controls">
-      <label class="checkbox">
-        <input type="checkbox"
-               {{#ifEqual discussion_type "threaded"}}checked{{/ifEqual}}
-               name="threaded">
-        {{#t "allow_threaded_replies"}}Allow threaded replies{{/t}}
-      </label>
+      {{#unless isAnnouncement}}
+        <label class="checkbox">
+          <input type="checkbox"
+                 {{#ifEqual discussion_type "threaded"}}checked{{/ifEqual}}
+                 name="threaded">
+          {{#t "allow_threaded_replies"}}Allow threaded replies{{/t}}
+        </label>
+      {{/unless}}
       <label class="checkbox">
         <input type="checkbox"
                {{#if delayed_post_at}}checked{{/if}}
