--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,4 +1,5 @@
 <%
+  js_env :CALENDAR => { :ACTIVE_EVENT => @active_event_id }
   js_bundle :calendar
   jammit_css :calendar
   @body_classes << "full-width"
