make 'new groups' form consistent
the 'require group members to be in the same section' checkbox is only allowed
if 'allow self signup' is checked.  this is taken care of in javascript once
the user starts interacting with the form, but by default it should be disabled
because the requirement isn't met.

test plan:
- go to the groups page, click on new set of groupse
- allow self signup should be unchecked, and require same section should be
  disabled.
- checking allow self signup should enable require same section.

Change-Id: Ibb3def09756c75619933bb80d240583c51d97b3f
Reviewed-on: https://gerrit.instructure.com/13185
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/groups/_add_group_category.html.erb
+++ b/app/views/groups/_add_group_category.html.erb
@@ -40,7 +40,7 @@ require([
           <%= link_to(image_tag('help.png'), '#', :class => 'self_signup_help_link no-hover',
                       :title => t(:self_signup_help_tooltip, "What Are Self Sign-Up Groups?")) %>
           <br/>
-          <input type="checkbox" name="category[restrict_self_signup]" id="category_restrict_self_signup" value="1" />
+          <input type="checkbox" name="category[restrict_self_signup]" id="category_restrict_self_signup" value="1" disabled />
           <label for="category_restrict_self_signup"><%= t :restricted_self_signup, "Require group members to be in the same section" %></label>
         </td>
       </tr>
