remove "move" icon on questions when in a bank. Fixes #10148
Testing Plan:
===========
* Open a question bank (quizzes -> Manage Question Banks)
* The "move" icon should not display on question (normally on hover)
* Edit a normal quiz. The "move" icon should appear and function.

Change-Id: Ica547b5ef8bf1e0498fec337402cf9c9e832de36
Reviewed-on: https://gerrit.instructure.com/13256
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -216,7 +216,9 @@ div#content
 
   &:last-child
     border-bottom: none
-
+  .move
+    display: none
+    // Don't display the "move"  icon since the the new order change isn't persisted for a bank. #10148
 
 .question_holder 
   :position relative
