absolute background image paths, fixes #10132
fixes issue with certain image paths being incorrect when jammit packages
up stylesheets

test plan:
1. go to a page that used a relative image paths (e.g. new icons on the
   discussions index)
2. confirm that the image shows up correctly (console should not show any
   404s)

Change-Id: I24cad8fac2f689ecaf964ebe2ede3856c3f94c90
Reviewed-on: https://gerrit.instructure.com/13269
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/activity_feed.scss
+++ b/app/stylesheets/activity_feed.scss
@@ -80,7 +80,7 @@
 }
 
 .item-type-image {
-  background-image: url('../../../images/blue/quickstart-icons.png') !important;
+  background-image: url('/images/blue/quickstart-icons.png') !important;
   background-repeat: no-repeat;
 }
 
