--- a/app/stylesheets/blue/_icons.scss
+++ b/app/stylesheets/blue/_icons.scss
@@ -8,10 +8,10 @@ i[class*=icon-], i[class^=icon-] {
 
   a:hover &,
   a:focus &,
-  .hover & { background-image: url(../../../images/blue/canvas-icons-16x16-blue.png); }
+  .hover & { background-image: url(/images/blue/canvas-icons-16x16-blue.png); }
 
   a:active &,
-  .active & { background-image: url(../../../images/blue/canvas-icons-16x16-ltgrey.png); }
+  .active & { background-image: url(/images/blue/canvas-icons-16x16-ltgrey.png); }
 
   .btn & { margin-bottom: -3px;}
 
