fix a few quiz behavior problems discovered in QA process. Fixes #10161
 The following issues are corrected with this:
 * wasn't showing "You Answered" arrow on incorrect answer
   for multiple-drowpdowns
* The "Correct Answer" arrow was not showing up on the quiz edit
   page when use clicks "Show Question Details" checkbox
* On questions where the correct answer can be selected
   (t/f, multiple checkboxes, etc), it was no longer showing
   the persistent green arrow of the currently specified correct answer.

Testing Plan:
===========
* When editing an existing quiz, click the "Show Question Details" and
   verify that the "Correct Answer(s)" arrow appears and points to the
   answer area.
* Edit a t/f question (for example) and change the "correct" answer.
   After updating, verify that the "Correct Answer" arrow updates to the
   new correct answer.
* Take a quiz (preview or otherwise) and for a multiple dropdown question,
   verify that a blank or incorrect choice shows the red "You Answered"
   arrow and it is surrounded by the red error box.

Change-Id: I004896b9272b69bfe224379f153d577a17e82f66
Reviewed-on: https://gerrit.instructure.com/13280
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -21,9 +21,6 @@ div#content
   border: 1px solid #fff
   padding: 16px
 
-.question_editing .question_holder
-  overflow: hidden
-
 .question_editing.brief
   min-height: 80px
 
@@ -304,6 +301,7 @@ div#content
         border-top: 1px solid #ccc
         text-align: left
     .equation_combinations_holder
+      position: relative
       max-height: 100px
       overflow: auto
     .equation_combinations
@@ -1092,6 +1090,17 @@ ul#quiz_versions
       .answer
         margin: 0 !important
         padding-top: 0
-#questions.question_editing .question
-  .answers_wrapper
-    border-top: none
+  &.question_editing
+    .question
+      .answers_wrapper
+        border-top: none
+        .answer
+          position: relative
+      .answers
+        .answer
+          position: relative
+      .calculated_question_answers
+        position: relative
+      /* Display persistent correct answer arrow when editing only. */
+      &.selectable .form_answers .answer.correct_answer .answer_select .answer_box
+        background: url(/images/correct_answer.png) no-repeat 3px 5px
