don't display correct answers when quiz set to not show. Fixes #10235 fixes #10154
Address the case when a quiz is set to not show the correct answers
when reviewing the results. This adds question-level arrows that show
if it was correct, incorrect, or partial.

This also addresses:
* incorrectly showing answer feedback on a survey
* making the text inputs be readonly when viewing results
* survey results style issues with borders and header area
* hides 'Some questions not yet graded' when an essay
  question is used on a survey
* hide question points on a survey
* shows "You Answered" as grey arrow on survey results

Testing Notes:
=============
* Setup a quiz with the option "Let Students See their Quiz Responses"
   and ensure "Show Which Answers Were Correct" is unchecked and
   save the quiz.
* Take the quiz.
* The answer arrows should all be on the question level (not on the individual answers).
* The "red box" around incorrect answers should not appear.
* The arrows should include the following
   * "Correct!" - When fully correct. Full points received.
   * "Partial" - Shows as red/incorrect. Partial points were awarded.
   * "Unanswered" - shows for questions that don't have an easy
      way to show what the user enetered.
   * "Incorrect" - when wrong and no points were awarded.
* When the option to show correct answers is checked on the quiz, it
   should still show the "Correct Answer" arrow and put red error
   boxes around incorrect answers.
* When viewing the quiz in edit mode and checking "Show Question Details"
   it should show the "Correct Answer" arrow regardless of the checked
   quiz option. (Teacher view)

Change-Id: I0083d383fcd28c906e1810615769586e7ecd48a7
Reviewed-on: https://gerrit.instructure.com/13293
Reviewed-by: Zach Wily <zach@instructure.com>
Tested-by: Zach Wily <zach@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -20,6 +20,9 @@ div#content
   background: $backgroundColor
   border: 1px solid #fff
   padding: 16px
+.quiz-submission
+  .question-not-graded-text
+    display: none
 
 .question_editing.brief
   min-height: 80px
@@ -61,7 +64,7 @@ div#content
           +opacity(1)
         &.selected_answer
           +opacity(1)
-        &.wrong_answer,
+        &.wrong_answer
           +border-radius(6px)
           border: 2px solid red
           padding-bottom: 8px
@@ -91,6 +94,18 @@ div#content
       :border-color inherit
     &.incorrect
       :border-color inherit
+  &.suppress_correct_answers, &.survey_results
+    .question .answers .answer.wrong_answer
+      border: none
+      border-top: 1px solid #DDD
+      +border-radius(0)
+      padding-bottom: 0
+      +opacity(1)
+      .ui-selectmenu-status
+        color: inherit
+  &.survey_results
+    .question_points_holder
+      display: none
 
 #questions.assessing,#questions.assessment_results
   .question_holder
