--- a/app/views/quizzes/_single_answer.html.erb
+++ b/app/views/quizzes/_single_answer.html.erb
@@ -1,10 +1,13 @@
+<%
+   editable ||= false
+%>
 <div>
   <% value = (@stored_params.present?) ? h(@stored_params["question_#{hash_get(question, :id)}"]) : h(hash_get(user_answer, :text).to_s) %>
 <% if question_type.entry_type == "text_box" %>
-  <input type="text" name="question_<%= hash_get(question, :id) %>" value="<%= value %>" class="question_input" autocomplete='off'/>
+  <input type="text" name="question_<%= hash_get(question, :id) %>" value="<%= value %>" class="question_input" autocomplete='off' <%= 'readonly="readonly"' unless editable %>/>
 <% elsif question_type.entry_type == "numerical_text_box" %>
-  <input type="text" name="question_<%= hash_get(question, :id) %>" value="<%= value %>" class="question_input numerical_question_input" autocomplete='off'/>
+  <input type="text" name="question_<%= hash_get(question, :id) %>" value="<%= value %>" class="question_input numerical_question_input" autocomplete='off' <%= 'readonly="readonly"' unless editable %>/>
 <% elsif question_type.entry_type == "textarea" %>
-  <textarea name="question_<%= hash_get(question, :id) %>" class="question_input" style="width: 90%;" autocomplete='off'><%= value %></textarea>
+  <textarea name="question_<%= hash_get(question, :id) %>" class="question_input" style="width: 90%;" autocomplete='off' <%= 'readonly="readonly"' unless editable %>><%= value %></textarea>
 <% end %>
 </div>
