--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -309,7 +309,7 @@ $(document).ready(function() {
   <% end %>
 </div>
 </div>
-<div id="questions" class="question_editing brief">
+<div id="questions" class="question_editing brief show_correct_answers">
   <% @quiz.root_entries.each do |question| %>
     <% if question[:entry_type] == "quiz_group" %>
       <%= render :partial => "quizzes/question_group", :object => question %>
