--- a/app/views/context/_dashboard_topic_entry.html.erb
+++ b/app/views/context/_dashboard_topic_entry.html.erb
@@ -20,7 +20,12 @@
           <a href="<%= context_prefix(context_code) %>/discussion_topics/<%= topic ? topic.id : "{{ topic_id }}" %>#reply" class="more_options_reply_link" style="padding-right: 10px; color: #666;"><%= t('#links.more_options', %{more options}) %></a>
         </div>
         <div class="button-container" style="padding-bottom: 5px;">
-          <button type="submit" class="button small-button submit_button"><%= t('#buttons.post_message', %{Post Message}) %></button>
+          <button
+            type="submit"
+            class="button small-button submit_button"
+            data-track-category="dashboard"
+            data-track-label="reply to discussion / announcement"
+          ><%= t('#buttons.post_message', %{Post Message}) %></button>
           <button type="button" class="button button-secondary cancel_button"><%= t('#buttons.cancel', %{Cancel}) %></button>
         </div>
       <% end %>
