--- a/app/views/courses/_recent_event.html.erb
+++ b/app/views/courses/_recent_event.html.erb
@@ -16,7 +16,11 @@
                                              :submission => submission)
   %>
 <li style="<%= hidden if is_hidden %>" class="event">
-  <a class="<%= icon_class %> tooltip" href="<%= recent_event_url(recent_event) %>">
+  <a
+    data-track-category="dashboard"
+    data-track-label="recent event"
+    class="<%= icon_class %> tooltip" href="<%= recent_event_url(recent_event) %>"
+  >
     <span class="tooltip_wrap">
       <span class='tooltip-carat'></span>
       <span class="tooltip_text">
