--- a/app/views/shared/_menu_section.html.erb
+++ b/app/views/shared/_menu_section.html.erb
@@ -5,7 +5,7 @@
     <ul class="menu-item-drop-column-list">
       <%= render :partial => partial, :collection => max_to_show ? collection.first(max_to_show) : collection, :locals => {:title => title } %>
       <% if link_text %>
-        <li class="menu-item-view-all"><%= link_to("#{link_text} (#{(collection_size || collection.size)})", more_link_for_over_max) %></li>
+        <li class="menu-item-view-all"><%= link_to("#{link_text} (#{(collection_size || collection.size)})", more_link_for_over_max, 'data-track-category' => 'assignment dropdown', 'data-track-label' => 'navigated') %></li>
       <% end %>
     </ul>
   </td>
