update "update score" button on quiz history page.
on quiz history page, right-align "update score" button and
add new blue styles.

Change-Id: If19b39b3bc08c5daa48d475733f08969147cd9af
Reviewed-on: https://gerrit.instructure.com/13296
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -1047,6 +1047,7 @@ ul#quiz_versions
 
   .button-container
     padding: 16px
+    text-align: right
 
   #questions
     .user_points, .question_points_holder
