change course placeholder name
fixes #10253

test plan: create a new course with the new simplified dialog, the
placeholder course name should be "Course Name"

Change-Id: I413df93f1b631cb31762b75115c00ffb4a221592
Reviewed-on: https://gerrit.instructure.com/13312
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Wily <zach@instructure.com>

--- a/app/views/shared/_new_course_form.html.erb
+++ b/app/views/shared/_new_course_form.html.erb
@@ -9,7 +9,7 @@
     <%= f.label :name, :en => "Course Name", :class => "control-label" %>
     <div class="controls">
       <%= f.text_field :name,
-                       :placeholder => t('my_awesome_course', 'My Awesome New Course'),
+                       :placeholder => t('new_course_name_placeholder', 'Course Name'),
                        :class => 'input-xlarge' %>
     </div>
   </div>
